# HotelService

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose-ci.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  routers.py
app/: config.py  database.py  exceptions.py  main.py  setup_redis.py
app/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
app/connectors/: redis_connector.py
app/migrations/: env.py
app/migrations/versions/: 2024_12_03_1716-eae8050fe733_add_rooms_model.py  2024_12_09_1328-e9ec254a6492_add_users.py  2024_12_09_1359-d54ac54a151f_fix_users.py  2024_12_10_2337-479ebd548b0c_add_bookings.py  2024_12_16_1451-1989f23bb290_add_facilities.py  2025_02_04_1355-79bcd744c576_.py  701794109d73_initial_version.py  d53692db1177_add_rooms_model.py
app/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
app/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
app/repositories/mappers/: base.py  mappers.py
app/schemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
app/services/: auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
app/tasks/: celery_app.py  tasks.py
app/utils/: db_manager.py
schemas/: hotels.py
tests/: conftest.py  mock_rooms.json
tests/facilities/: test_api.py
tests/integrations_tests/: test_auth.py
tests/integrations_tests/auth/: test_api.py
tests/integrations_tests/bookings/: test_api.py  test_db.py
tests/integrations_tests/facilities/: test_api.py
tests/integrations_tests/hotels/: test_api.py  test_db.py
tests/unit_tests/: test_auth.py
