[tool.poetry]
name = "studyproject"
version = "0.1.0"
description = ""
authors = ["kiluzoldik <gakerchannel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
black = "^24.10.0"
pyjwt = "^2.10.1"
bcrypt = "4.0.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.3"}
redis = "^5.2.1"
fastapi-cache2 = "^0.2.2"
celery = "^5.4.0"
pillow = "^11.0.0"
aiosmtplib = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
